<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- -->
    <!-- Label shown on launcher icon -->
    <string name="app_label">Alarming! Beta</string>

    <string name="app_description">Alarming! - AlarmClock enhanced</string>
    <string name="app_version">&#946;1.2.7</string>
    <string name="app_preferences">Alarming! Preferences</string>
	
    <string name="preferences">Preferences</string>
    
    <string name="alarm_list_empty">No alarms set.</string>

    <string name="snooze_dismissed">Snooze dismissed.</string>
    <string name="snooze_message_text">Snoozing until %s</string>
    <string name="quick_alarm">Quick Snooze</string>
    

    <string name="captcha_dismiss_title">Captcha on Dismiss</string>
    <string name="captcha_dismiss_summary">Alarm dismiss requires input</string>
    <string name="captcha_snooze_title">Captcha on Snooze</string>
    <string name="captcha_snooze_summary">Snoozing alarm requires input</string>
    <string name="captcha_message">Tap the yellow dots to dismiss</string>

    <string name="about">About</string>
    <string name="about_title">About Alarming!</string>
    <string name="about_ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="about_text"><b>Original source</b>\n<u>http://source.android.com</u>\n\n
    <b>Source code available</b>\n<u>http://github.com/lithium/alarming</u>\n\n
    <b>Icon created by</b>\n<u>http://en.wikipedia.org/wiki/User:Tkgd2007</u>\n\n
    Published by Hlidskialf Software\n\n
    No warranty of any kind provided.\nNo affiliation with above parties implied.
    </string>

    <string name="alarm_defaults">Alarm Defaults</string>
    <string name="alarm_defaults_summary">Default values for new alarms</string>

    <!-- Menu item on Alarm Clock screen: Add alarm -->
    <string name="add_alarm">Add alarm</string>

    <!-- Context Menu Item on Alarm Settings screen: Edit alarm -->
    <string name="edit_alarm">Edit alarm</string>

    <!-- Context Menu Item on Alarm Settings screen: Delete alarm -->
    <string name="delete_alarm">Delete alarm</string>

    <!-- Context Menu Item on Alarm Settings screen: Preview alarm -->
    <string name="fire_alarm">Preview alarm</string>

    <!-- Menu item on Alarm Clock screen: Show clock -->
    <string name="show_clock">Show Clock</string>
    <string name="show_clock_summary">Show clock on alarm list screen</string>

    <string name="bigclock">Bed Clock</string>
    <string name="bigclock_prefs">Bed Clock Preferences</string>
    <string name="bigclock_prefs_summary">Long-click clock to see bed clock</string>
    <string name="bigclock_enable">Enable bed clock</string>
    <string name="bigclock_enable_summary">Large clock visible from bed</string>
    <string name="bigclock_wake_lock">Bed clock never sleeps</string>
    <string name="bigclock_wake_lock_summary">Bed clock disables standby if charging</string>
    <string name="flip_orientation">Change Orientation</string>
    <string name="next_animation">Next animation</string>

    <string name="alarm_settings">Alarm Settings</string>
    <string name="alarm_alert_settings">Ringtone Settings</string>

    <!-- Menu item on Alarm Clock screen: Hide clock -->
    <string name="hide_clock">Hide clock</string>

    <!-- Preference category on Alarm Settings screen: Set alarm -->
    <string name="set_alarm">Set alarm</string>

    <string name="alarm_name">Name</string>
    <string name="alarm_noname">No name</string>

    <!-- Setting labels on Set alarm screen: Volume -->
    <string name="alarm_volume">Volume</string>
    <string name="alarm_crescendo">Volume crescendo</string>

    <!-- Setting labels on Set alarm screen: Delay -->
    <string name="alarm_delay">Delay</string>

    <!-- Setting labels on Set alarm screen: Duration -->
    <string name="alarm_duration">Duration</string>

    <!-- Setting labels on Set alarm screen: Snooze time -->
    <string name="alarm_snooze">Snooze</string>

    <!-- Setting labels on Set alarm screen: Enable alarm -->
    <string name="enable">Turn on alarm</string>

    <!-- Setting labels on Set alarm screen: Vibration on or off -->
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_vibrate_only">Vibrate only</string>
    <string name="alarm_vibrate_summary">Double-click for Vibrate Only</string>

    <!-- Setting labels on Set alarm screen: Repeat -->
    <string name="alarm_repeat">Repeat</string>

    <!-- Setting labels on Set alarm screen: Select alarm ringtone  -->
    <string name="alert">Ringtone</string>

    <!-- Setting labels on Set alarm screen: Set time  -->
    <string name="time">Time</string>


    <!-- Title of the alarm alert -->
    <string name="alert_title">Alarm</string>
    
    <!-- Button labels on the alarm dialog: Dismiss -->
    <string name="alarm_alert_dismiss_text">Dismiss</string>

    <!-- Alarm Alert screen: this message is shown after an alarm rung
         unattended for a number of minutes.  It tells the user that
         the alarm has been silenced.-->
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>

    <!-- Button labels on the alarm dialog: Snooze -->
    <string name="alarm_alert_snooze_text">Snooze</string>

    <!-- Toast that appears after Alarm is snoozed from the Alarm
         dialog. Says the alarm will snooze for xxx minutes.  -->
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>

    <!-- Toast that appears after Alarm is snoozed from the Alarm
         dialog. Shown if snooze cannot be set because the next alarm
         would fire before the snooze alrm.  "Snooze not set - next
         alarm set for xxx."  -->
    <string name="alarm_alert_snooze_not_set">Snooze not set -- next alarm set for <xliff:g id="time">%s</xliff:g></string>


    <!-- Alarm confirmation toast: Describes how long from now until
         alarm fires -->
    <string name="alarm_set">This alarm is set for <xliff:g id="time_delta">%s</xliff:g> from now.</string>

    <!-- Alarm confirmation toast: A combiner that orders the segments
         that follow -->
    <string name="combiner"><xliff:g id="xxx">%1$s</xliff:g><xliff:g id="xxx">%2$s</xliff:g><xliff:g id="xxx">%3$s</xliff:g><xliff:g id="xxx">%4$s</xliff:g><xliff:g id="xxx">%5$s</xliff:g></string>

    <!-- Alarm confirmation toast: singular day -->
    <string name="day">"1 day"</string>

    <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>

    <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string>

    <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>

    <!-- Alarm confirmation toast: "and" to join hours and minutes -->
    <string name="and">" and "</string>

    <!-- Alarm confirmation toast: space  -->
    <string name="space">" "</string>

    <!-- Alarm confirmation toast: time less than one minute  -->
    <string name="subminute">"less than 1 minute"</string>

    <!-- Alarm confirmation toast: singular minute  -->
    <string name="minute">"1 minute"</string>

    <!-- Alarm confirmation toast: plural minutes  -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>

    <!-- Alarm confirmation toast: Ante Meridiem, or am  -->
    <string name="am">am</string>

    <!-- Alarm confirmation toast: Post Meridiem, or pm  -->
    <string name="pm">pm</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to repeat every day -->
    <string name="every_day">every day</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to never repeat -->
    <string name="never">Never</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: concatenate days with
         this character, i.e. "Mon, Tue, Wed" -->
    <string name="day_concat">", "</string>

    <!-- Appears at the top of the Clock Picker screen: Tell user to
         select a clock to display -->
    <string name="clock_instructions">Select a clock to display.</string>

    <!-- Error dialog title: Alarm not set.  Appears only on critical
         failure -->
    <string name="error">Alarm not set</string>

    <string name="empty_string"></string>

    <!-- Error dialog message.  Appears only on critical
         failure -->
    <string name="dberror">Sorry, the alarm could not be set.</string>

    <!-- Snooze Dialog Preference -->
    <string name="quickalarm_title">Show Quick Snooze</string>
    <string name="quickalarm_summary">Use Quick Snooze for short timers</string>


    <string name="snooze_title">Snooze duration</string>
    <string name="snooze_message">How long snooze button will pause</string>
    <string name="snooze_disabled">Snooze disabled</string>
    <string name="snooze_unit">minutes</string>

    <string name="duration_title">Alarm duration</string>
    <string name="duration_message">How many minutes the alarm will sound</string>
    <string name="duration_unit">minutes</string>
    <string name="duration_infinite">Forever</string>

    <string name="delay_title">Alarm delay</string>
    <string name="delay_message">Pause between each tone alert</string>
    <string name="delay_unit">ms</string>
    <string name="delay_zero">No delay</string>

    <string name="volume_title">Alarm volume</string>
    <string name="volume_message">Volume of alarm</string>
    <string name="volume_unit">%</string>
    <string name="volume_zero">Silent</string>
    
    <string name="crescendo_title">Crescendo</string>
    <string name="crescendo_message">How long volume takes to increase</string>
    <string name="crescendo_unit">seconds</string>
    <string name="crescendo_zero">Immediately</string>

    <!-- Days of week -->
    <string-array name="days_of_week">
        <!-- Day of week: Monday -->
        <item>Monday</item>
        <!-- Day of week: Tuesday -->
        <item>Tuesday</item>
        <!-- Day of week: Wednesday -->
        <item>Wednesday</item>
        <!-- Day of week: Thursday -->
        <item>Thursday</item>
        <!-- Day of week: Friday  -->
        <item>Friday</item>
        <!-- Day of week: Saturday -->
        <item>Saturday</item>
        <!-- Day of week: Sunday -->
        <item>Sunday</item>
    </string-array>
    
    <!-- Short Day of week  -->
    <string-array name="days_of_week_short">
        <!-- Short Day of week: Mon -->
        <item>Mon</item>
        <!-- Short Day of week: Tue -->
        <item>Tue</item>
        <!-- Short Day of week: Wed -->
        <item>Wed</item>
        <!-- Short Day of week: Thu -->
        <item>Thu</item>
        <!-- Short Day of week: Fri  -->
        <item>Fri</item>
        <!-- Short Day of week: Sat -->
        <item>Sat</item>
        <!-- Short Day of week: Sun -->
        <item>Sun</item>
    </string-array>

</resources>


